// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render countdown 1 year : 1 month : 1 day for screen-size 764 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          month
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          day
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 1 year : 1 month : 1 day for screen-size 1024 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          month
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          day
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 1 year : 1 month : undefined day for screen-size 764 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          month
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 1 year : 1 month : undefined day for screen-size 1024 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          month
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 1 year : undefined month : undefined day for screen-size 764 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 1 year : undefined month : undefined day for screen-size 1024 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 2 year : 2 month : 2 day for screen-size 764 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          years
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          months
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          days
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 2 year : 2 month : 2 day for screen-size 1024 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          years
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          months
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          days
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 3 year : 3 month : 3 day for screen-size 764 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          3
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          years
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          3
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          months
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          3
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          days
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render countdown 3 year : 3 month : 3 day for screen-size 1024 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          3
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          years
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          3
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          months
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          3
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          days
        </h4>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
